# ifc-lite

./: .gitignore  .railwayignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  knip.json  mkdocs.yml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  turbo.json  vercel.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
rust/clash/: Cargo.toml
rust/clash/src/: session.rs
rust/core/: Cargo.toml
rust/core/examples/: test_real_ifc.rs
rust/core/src/: columnar_index.rs  decoder.rs  fast_parse.rs  fast_parse_tests.rs  georef.rs  legacy_entities.rs  lib.rs  model_bounds.rs  parser.rs  schema_gen.rs  schema_gen_tests.rs  schema_helpers.rs  step_encoding.rs  streaming.rs  units.rs
rust/core/src/parser/: mod.rs  scanner.rs  tokenizer.rs
rust/core/tests/: issue_1023_non_utf8_bytes.rs  issue_856_scanner_skips_comment_hashes.rs  issue_860_stratum_subtypes.rs  unit_scale_parity.rs
rust/core/tests/fixtures/: ifc_string_vectors.json  unit_scale_vectors.json
rust/csg-thread-bench/: Cargo.toml  build.sh
rust/csg-thread-bench/src/: lib.rs
rust/csg-thread-bench/web/: index.html  serve.mjs
rust/export/: Cargo.toml
rust/export/examples/: dump_hbjson.rs  glb_export_profile.rs
rust/export/src/: adjacency.rs  collada.rs  constructions.rs  error.rs  frame.rs  geom.rs  gltf.rs  hbjson.rs  ifc5.rs  json.rs  kmz.rs  lib.rs  model.rs  openings.rs  parquet_bos.rs  rooms.rs  shades.rs  step.rs
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs  tests.rs
rust/geometry/: Cargo.toml
rust/geometry/examples/: color_extraction_test.rs
rust/geometry/src/: alignment.rs  bool2d.rs  bool2d_tests.rs  cdt.rs  congruence.rs  csg.rs  csg_capture.rs  diagnostics.rs  extrusion.rs  extrusion_watertight_tests.rs  facet_weld.rs  geom_hash.rs  instancing.rs  lib.rs  manifold_kernel.rs  material_layer_index.rs  mesh.rs  mesh_orient.rs  mesh_weld.rs  profile.rs  profile_extractor.rs  profiles.rs  projection_outline.rs  rect_fast.rs  tessellation.rs  transform.rs  triangulation.rs  void_index.rs
rust/geometry/src/congruence/: engine.rs  mod.rs  tests.rs
rust/geometry/src/csg/: consolidate.rs  mod.rs  normals.rs
rust/geometry/src/instancing/: collate.rs  mod.rs
rust/geometry/src/kernel/: arrangement.rs  broadphase.rs  budget.rs  fixed.rs  interner.rs  mesh_bridge.rs  mod.rs  predicates.rs  rational.rs  retriangulate.rs  retriangulate_audit.rs  retriangulate_audit_tests.rs  retriangulate_cleanup.rs  retriangulate_recover.rs  retriangulate_recover_tests.rs  signed_volume.rs  tritri.rs
rust/geometry/src/processors/: advanced.rs  advanced_face.rs  alignment.rs  boolean.rs  brep.rs  csg_primitive.rs  extrusion.rs  extrusion_tapered.rs  helpers.rs  mapped.rs  mod.rs  sectioned.rs  surface.rs  swept.rs  tessellated.rs  tests.rs  texture.rs
rust/geometry/src/profiles/: mod.rs  shapes.rs  simplify.rs  simplify_tests.rs  steel_shapes.rs  tests.rs
rust/geometry/src/router/: caching.rs  clipping.rs  content_hash.rs  diagnostics.rs  instancing.rs  layers.rs  mod.rs  processing.rs  rep_filter.rs  rtc_offset.rs  tests.rs  textured.rs  transforms.rs  voids.rs  voids_2d.rs
rust/geometry/src/simplify/: boxify.rs  cavities.rs  cluster.rs  mod.rs  ray_parity.rs
rust/geometry/tests/: bool_failure_test.rs  cdt_volume_watertight_verify.rs  csg_model_profile.rs  csg_property_test.rs  csg_quality_regression.rs  dedup_validate.rs  engulfing_solid_void.rs  geometry_correctness_harness.rs  issue_098_atomic_cut.rs  issue_098_reveal_wall.rs  issue_098_v5c.rs  issue_1109_budget.rs  issue_1155_halfspace_flyaway.rs  issue_1164_swept_disk_trimmed_line.rs  issue_1167_real_wall.rs  issue_1167_rotated_wall_opening.rs  issue_1172_revolved_planeangleunit.rs  issue_1348_swept_disk_composite_arc.rs  issue_604_advanced_face_holes.rs  issue_604_door_regression.rs  issue_635_boolean_clipping_test.rs  issue_821_difference_emptied_host.rs  issue_854_rect_hollow_fillet.rs  issue_859_tin_irregular_network.rs  issue_953_trimmed_curve_cartesian.rs  issue_964_arbitrary_profile_voids.rs  issue_977_flush_recess.rs  issue_979_feature_element_profiles.rs  material_layers_test.rs  merge_layers_skip_test.rs  opening_void_cut_local_frame_test.rs  polygonal_bounded_half_space_side_regression.rs  production_void_path_test.rs  rect_fast_placement_frame_spike.rs  rect_param_census.rs  rect_param_gate.rs  rect_param_parity.rs  rect_param_production.rs  rect_param_validate.rs  rtc_jobs_ordering.rs  (+9 more)
rust/processing/: Cargo.toml
rust/processing/examples/: csg_scaling_bench.rs
rust/processing/src/: determinism.rs  determinism_tests.rs  element.rs  element_tests.rs  georeferencing.rs  lib.rs  parallel_scan.rs  pipeline_diagnostics.rs  prepass.rs  prepass_styled.rs  processor.rs  shard_classes.rs  simplify_math.rs  simplify_session.rs  simplify_session_tests.rs  symbolic.rs
rust/processing/src/style/: mod.rs  (+3 more)
rust/processing/tests/: beam_winding_consistency.rs  element_failure_parity.rs  faceted_brep_deadlock_regression.rs  faceted_brep_point_cache.rs  georef_map_conversion_math.rs  instancing_dont_bake.rs  instancing_multi_item.rs  instancing_real_geometry.rs  issue_1075_spatial_zone.rs  issue_1320_wall_67828_round_window.rs  issue_1781_image_textures.rs  issue_957_type_only_geometry.rs  issue_961_textures.rs  mesh_determinism.rs  module_size_allowlist.txt  module_size_ratchet.rs  native_geometry_diagnostics.rs  rtc_curve_only_pollution.rs  rtc_surface3d_pollution.rs  site_rotation.rs  source_vertex_weld.rs  styling_default_colors.rs  styling_indexed_colour.rs  styling_material_chain.rs  styling_parity.rs  styling_submesh_split.rs  tessellation_quality_server.rs
rust/python/: Cargo.toml  README.md  ifclite_geom.pyi  pyproject.toml
rust/python/examples/: dump_json.py  export_obj.py  quickstart_numpy.py
rust/python/src/: lib.rs
rust/wasm-bindings/: Cargo.toml
rust/wasm-bindings/src/: lib.rs  tracing_console.rs  zero_copy.rs
rust/wasm-bindings/tests/: mesh_determinism.rs
(+819 files in other folders)
