[workspace]
members = ["rust/core", "rust/geometry", "rust/processing", "rust/clash", "rust/wasm-bindings", "apps/server"]
resolver = "2"

[workspace.package]
version = "3.1.1"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/LTplus-AG/ifc-lite"

[workspace.dependencies]
ifc-lite-core = { version = "3.1.1", path = "rust/core" }
ifc-lite-geometry = { version = "3.1.1", path = "rust/geometry" }
ifc-lite-processing = { version = "2.1.7", path = "rust/processing" }
ifc-lite-clash = { version = "3.0.0", path = "rust/clash" }
ifc-lite-wasm = { version = "3.1.1", path = "rust/wasm-bindings" }

[profile.release]
opt-level = 3           # Optimize for speed
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = 'abort'         # Smaller panic handler
overflow-checks = false # Remove overflow checks in release

[profile.release.package."*"]
opt-level = 3
strip = true

# Server-only release profile: re-enables stack unwinding so a panic while
# parsing untrusted, attacker-supplied IFC bytes on a `spawn_blocking` thread
# becomes a per-request `JoinError` (mapped to HTTP 500) instead of aborting
# the whole multi-tenant process. The default `release` profile keeps
# `panic = 'abort'` so the wasm bundle stays small.
# Built via `cargo build --profile server-release` (see apps/server/Dockerfile).
[profile.server-release]
inherits = "release"
panic = "unwind"

