[package]
name = "ifc-lite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance IFC/STEP parser for building data"
keywords = ["ifc", "bim", "step", "parser", "aec"]
categories = ["parsing", "data-structures"]
readme = "../../README.md"
exclude = ["examples/test_real_ifc.rs"]

[features]
default = []

[dependencies]

# Even faster float parsing (2-3x faster than lexical-core)
# fast-float2 is the maintained fork of unmaintained fast-float (GHSA-x8jh-xj3x-gx3c, GHSA-8655-xgh5-5vvq)
fast-float2 = "0.2"

# Async streaming
futures-core = "0.3"
futures-util = "0.3"

# Fast float/integer parsing (10x faster than std)
lexical-core = "1.0"

# Fast byte searching
memchr = "2.8"
# Parser
nom = "7.1"

# Fast hashing
rustc-hash = "2.1"

# SmallVec for stack-allocated small vectors (avoids heap allocation for small lists)
smallvec = "1.13"

# Error handling
thiserror = "2.0"

[dev-dependencies]
ifc-lite-geometry = { path = "../geometry" }
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
