# Rung-2 measurement crate: a threaded-vs-plain WASM build of JUST the pure-Rust
# CSG kernel, replaying a real captured void-cut corpus in the browser. Detached
# from the main workspace (own [workspace]) so the threaded RUSTFLAGS (atomics)
# and the wasm-bindgen-rayon dep never perturb the production tree. NOT shipped.
[package]
name = "csg-thread-bench"
version = "0.0.0"
edition = "2021"
publish = false
license = "MPL-2.0"
description = "rung-2 threaded-wasm CSG scaling measurement (not shipped)"

# Detach from the parent workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

# Disable wasm-opt: the homebrew binary mis-handles simd128/atomics (same reason
# the production build-wasm.sh disables it). LLVM -O3 from the release profile is
# the optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
# Threaded build: pull wasm-bindgen-rayon + enable the par_iter replay path.
# Built with the atomics/shared-memory RUSTFLAGS. The plain build omits this.
threads = ["dep:wasm-bindgen-rayon"]

[dependencies]
ifc-lite-geometry = { path = "../geometry", default-features = false, features = ["csg_capture"] }
ifc-lite-processing = { path = "../processing" }
wasm-bindgen = "=0.2.106"
rayon = "1.10"
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
