# SPDX-License-Identifier: MPL-2.0
[package]
name = "ifc-lite-export"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain-format exporters for ifc-lite (HBJSON / Honeybee energy model; glTF to follow)."

[dependencies]
ifc-lite-core = { workspace = true }
ifc-lite-geometry = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
