[package]
name = "ifc-lite-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometry processing and mesh generation for IFC models"
keywords = ["ifc", "bim", "geometry", "mesh", "aec"]
categories = ["graphics", "parsing"]
readme = "../../README.md"

[features]
# Manifold is on by default for native consumers (server, desktop, CLI,
# tests). The WASM crate (`ifc-lite-wasm`) opts into the
# `manifold-csg-wasm-uu` variant of the same kernel, single-threaded at
# runtime to fit the wasm32-unknown-unknown execution model. See
# `docs/architecture/geometry-pipeline.md` "WASM status" for build
# prerequisites and the history of the formerly-blocking
# `wasm-cxx-shim` issue, resolved in `manifold-csg-sys` 3.5.100.
default = ["manifold-csg"]
# Use the Manifold (https://github.com/elalish/manifold) C++ kernel for
# `subtract_mesh` / `union_mesh` / `intersection_mesh` instead of the
# legacy in-tree BSP port (`bsp_csg.rs`). Removes the 24-polygon operand
# cap and gives manifold-by-construction output.
manifold-csg = ["dep:manifold-csg"]
# Enable Manifold on `wasm32-unknown-unknown`. Implies `manifold-csg`.
# Requires the build host to have LLVM 18+ with libc++ headers and
# `wasm-ld` (see scripts/vercel-install.sh + docs/architecture/geometry-pipeline.md).
manifold-csg-wasm-uu = ["manifold-csg", "manifold-csg/unstable-wasm-uu"]
debug_geometry = []

[dependencies]

# Triangulation
earcutr = "0.5"

# 2D polygon boolean operations for profile-level void subtraction
i_overlay = "7.0"

# Core IFC parsing
ifc-lite-core.workspace = true

# Math library
nalgebra = { version = "0.35", default-features = false, features = ["std"] }

# Parallel processing
rayon = "1.10"

# Fast hashing
rustc-hash = "2.1"

# PNG decode for IfcBlobTexture (issue #961). Already in the dependency tree
# (transitive), so it adds no new wasm weight. Pure-Rust inflate
# (miniz_oxide / fdeflate) — wasm-safe.
png = "0.18"

# JPEG decode for IfcBlobTexture with RasterFormat 'JPG'/'JPEG' (issue #961).
# `default-features = false` drops the `rayon` parallelism (no threads on
# wasm32) — pure-Rust, wasm-safe. ~adds a small decoder to the bundle.
jpeg-decoder = { version = "0.3", default-features = false }

# Small vector optimization for frequently allocated small collections
smallvec = "1.13"

# Error handling
thiserror = "2.0"

# Optional Manifold CSG kernel (T1.1). Off by default; see the
# `manifold-csg` feature above for the activation contract.
# `default-features = false` drops TBB-backed parallelism, which doesn't
# work on WASM anyway and isn't required for correctness on native.
manifold-csg = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
approx = "0.5"
# Property-based testing for the CSG kernel invariants
# (tests/csg_property_test.rs): volume bounds, NaN-freedom, watertightness
# over bounded randomized inputs. Case counts are set explicitly per
# property to keep the suite fast.
proptest = "1.6"
# Snapshot testing for the geometry correctness harness
# (tests/geometry_correctness_harness.rs). Plain string snapshots only, so
# no serde-format features are needed. Accept intentional geometry changes
# with `cargo insta review`.
insta = { version = "1.43", default-features = false }
# Shewchuk adaptive exact geometric predicates (sign-exact, no_std, no C deps).
# Used by the cross-platform determinism floor test that underpins the planned
# pure-Rust CSG kernel. Dev-only: not linked into the shipping crate.
robust = "1.2"

[[example]]
name = "color_extraction_test"
path = "examples/color_extraction_test.rs"
