[package]
name = "ifc-lite-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometry processing and mesh generation for IFC models"
keywords = ["ifc", "bim", "geometry", "mesh", "aec"]
categories = ["graphics", "parsing"]
readme = "../../README.md"

[features]
# CSG runs on the in-tree pure-Rust exact mesh-arrangement kernel
# (`src/kernel/`) on every target — native and wasm32 alike. The former
# Manifold C++ kernel (`manifold-csg` / `manifold-csg-wasm-uu`) and the
# legacy BSP port were removed in the kernel consolidation
# (docs/architecture/geometry-pipeline.md).
default = []
debug_geometry = []
# Measurement-only: record the (host, cutters) of every kernel subtract into a
# global buffer so a bench can replay the real CSG corpus under varying thread
# counts. Zero cost when absent. See src/csg_capture.rs.
csg_capture = []

[dependencies]

# Triangulation
earcutr = "0.5"

# 2D polygon boolean operations for profile-level void subtraction
i_overlay = "7.0"

# Core IFC parsing
ifc-lite-core.workspace = true

# Math library
nalgebra = { version = "0.35", default-features = false, features = ["std"] }

# Parallel processing
rayon = "1.10"

# Fast hashing
rustc-hash = "2.1"

# PNG decode for IfcBlobTexture (issue #961). Already in the dependency tree
# (transitive), so it adds no new wasm weight. Pure-Rust inflate
# (miniz_oxide / fdeflate) — wasm-safe.
png = "0.18"

# JPEG decode for IfcBlobTexture with RasterFormat 'JPG'/'JPEG' (issue #961).
# `default-features = false` drops the `rayon` parallelism (no threads on
# wasm32) — pure-Rust, wasm-safe. ~adds a small decoder to the bundle.
jpeg-decoder = { version = "0.3", default-features = false }

# Small vector optimization for frequently allocated small collections
smallvec = "1.13"

# Error handling
thiserror = "2.0"

# Pure-Rust CSG kernel (`kernel/`) — exact geometric predicates.
# geometry-predicates: Shewchuk adaptive predicates + the public expansion
# primitives (two_sum/two_product/scale_expansion_zeroelim) for the indirect
# layer. no_std, no C, wasm-clean, FMA-free (platform-deterministic signs).
geometry-predicates = "0.3"
# Exact BigRational oracle + the predicate cascade's exact fallback tier
# (already transitive; promoted to direct).
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
bnum = { version = "0.14.4", features = ["numtraits"] }

[dev-dependencies]
approx = "0.5"
# Property-based testing for the CSG kernel invariants
# (tests/csg_property_test.rs): volume bounds, NaN-freedom, watertightness
# over bounded randomized inputs. Case counts are set explicitly per
# property to keep the suite fast.
proptest = "1.6"
# Snapshot testing for the geometry correctness harness
# (tests/geometry_correctness_harness.rs). Plain string snapshots only, so
# no serde-format features are needed. Accept intentional geometry changes
# with `cargo insta review`.
insta = { version = "1.43", default-features = false }
# Shewchuk adaptive exact geometric predicates (sign-exact, no_std, no C deps).
# Used by the cross-platform determinism floor test that underpins the
# pure-Rust CSG kernel. Dev-only: not linked into the shipping crate.
robust = "1.2"

[[example]]
name = "color_extraction_test"
path = "examples/color_extraction_test.rs"
