# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "ifc-lite-processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared IFC processing pipeline and types used by server and FFI"
keywords = ["ifc", "bim", "geometry", "pipeline", "aec"]
categories = ["parsing", "algorithms"]
readme = "../../README.md"

[dependencies]
ifc-lite-core = { version = "4.0.0", path = "../core" }
# CSG runs on the pure-Rust exact kernel inside ifc-lite-geometry on every
# target (the Manifold C++ kernel was removed in the kernel consolidation —
# see docs/architecture/geometry-pipeline.md).
ifc-lite-geometry = { version = "4.0.0", path = "../geometry", default-features = false }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.1"
tracing = "0.1"
