[package]
name = "ifc-lite-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true
description = "WebAssembly bindings for IFC-Lite"
keywords = ["ifc", "bim", "wasm", "webassembly", "aec"]
categories = ["wasm", "parsing"]
readme = "../../README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug_geometry = ["ifc-lite-geometry/debug_geometry"]
# Threaded WASM bundle: in-instance rayon pool via wasm-bindgen-rayon. Built
# separately with atomics/shared-memory flags (build-wasm.sh BUILD_THREADED=1).
# Off by default — the default bundle stays single-threaded.
threads = ["dep:wasm-bindgen-rayon"]
# Browser-console tracing: forwards the geometry/processing crates'
# structured diagnostics (the `observability` feature) to the DevTools
# console via a minimal Subscriber. OFF by default - the shipped bundle
# carries zero tracing code; build a diagnostics bundle with
# `wasm-pack build ... --features console-tracing`.
console-tracing = ["dep:tracing", "ifc-lite-processing/observability"]

[dependencies]
# Optional: only compiled for the threaded bundle (--features threads). Needs
# the atomics/shared-memory target-features to build, so it must stay optional.
wasm-bindgen-rayon = { version = "1.3.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
futures-util = "0.3"
# gloo-timers removed — sync processing for speed
ifc-lite-core.workspace = true
# CSG runs on the pure-Rust exact kernel inside ifc-lite-geometry — the
# same kernel on wasm32 and native. The Manifold C++ kernel and its
# LLVM/emsdk build prerequisites were removed in the kernel
# consolidation (docs/architecture/geometry-pipeline.md).
ifc-lite-geometry = { version = "4.1.0", path = "../geometry", default-features = false, features = [] }
# Canonical 2D-symbol extractor lives here; the wasm bindings just
# delegate (issue #843 follow-up — full parity, one implementation).
ifc-lite-processing = { version = "4.1.0", path = "../processing" }
# Pure-geometry clash kernel (BVH broad phase + exact triangle narrow phase).
ifc-lite-clash = { version = "4.1.0", path = "../clash" }
# Domain-format exporters (HBJSON, OBJ, glTF/GLB, CSV, JSON, JSON-LD, STEP, IFC5, Merged).
ifc-lite-export = { version = "4.1.0", path = "../export" }
js-sys = "=0.3.83"
rayon = "1.10"
# `ifc-lite-geometry` uses rayon `par_iter` (e.g. FacetedBrep
# preprocessing). On wasm32 there is no thread pool, so it runs
# serially — but rayon-core still needs `web_spin_lock` to compile and
# behave on wasm: it replaces std::sync::Mutex in rayon's coordination
# paths with a spin-lock. Without it std::sync::Mutex blocks/zombies —
# par_iter silently runs serial. (Empirically observed: 4.2× SLOWER
# than N-worker baseline before this fix.)
rayon-core = { version = "1", features = ["web_spin_lock"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
thiserror = "2.0"
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "=0.4.56"
tracing = { version = "0.1", optional = true, default-features = false, features = ["std"] }
web-sys = { version = "=0.3.83", features = ["console", "Performance", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.56"

[lints]
workspace = true
