[package]
name = "ifc-lite-desktop"
version = "1.1.7"
description = "IFC-Lite Desktop Application - Native high-performance IFC viewer"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/LTplus-AG/ifc-lite"
edition = "2021"

[lib]
name = "ifc_lite_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# IFC-Lite crates (reuse existing)
ifc-lite-core = { path = "../../../rust/core" }
ifc-lite-geometry = { path = "../../../rust/geometry" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.10"

# Hashing for cache keys
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Fast hashing for style indexes
rustc-hash = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
